--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.111.0"
 uvicorn = "^0.30.0"
 requests = "^2.32.2"
 redis = "^5.0.4"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 
 
 [build-system]
